Feat: Auto Slug
Auto slug generator

--- a/restaurants/templates/restaurants/restaurantlocation_detail.html
+++ b/restaurants/templates/restaurants/restaurantlocation_detail.html
@@ -7,4 +7,6 @@
     <h3>{{ object }} - <small>{{ object.location }}</small></h3>
     <p>{{ object.category }}</p>
 
+    <a href={% url 'restaurants' %}>Back</a>
+
 {% endblock %}
