--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container" style="padding-top: 50px">
     <h1>Welcome!</h1>
 
     {% include 'snippets/nav.html' %}
