--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -1,3 +1,4 @@
-<a href="/">Home</a>
-<a href="/about.html">About</a>
-<a href="/contact.html">Contact</a>
+<a href={% url 'home' %}>Home</a>
+<a href={% url 'about' %}>About</a>
+<a href={% url 'contact' %}>Contact</a>
+<a href={% url 'restaurants' %}>Restaurants</a>
